css/global.css
/* ... */
.pager li a,
.pager,
.pager li.pager-next,
.pager li.pager-current {
  background: none;
  border: none;
  width: inherit;
}

.pager li.pager-current {
  color: #000;
}

.pager li a {
  color: #3f966b;
}

.pager li a,
.pager li.pager-current {
  padding-left: 0;
  padding-right: 0;
}

.pager li:after {
  content: "/";
  font-style: italic;
  margin: 0 10px;
}

.pager li.pager-first a,
.pager li.pager-previous a,
.pager li.pager-next a,
.pager li.pager-last a {
  text-align: left;
  width: inherit;
}

.pager li.pager-last,
.pager li.pager-next.last,
.pager li.pager-next {
  position: relative;
  top: inherit;
  right: inherit;
  border-right: 0;
}

.node-type-emusik-playlist .zone-content {
  margin-bottom: 20px;
}

.node-type-emusik-playlist h1.title {
  color: #3F9666;
  font-size: 1.4em;
  font-weight: bold;
  letter-spacing: .02em;
  line-height: 1.4em;
  margin: 0 0 10px 0;
  padding: 0;
  text-transform: uppercase;
}

.node-type-emusik-playlist footer {
  display: none;
}

.node-type-emusik-playlist.page-node .node {
  margin-top: 0;
}

.node-type-emusik-playlist .field-type-text-with-summary {
  color: #666;
  font-size: 1.2em;
}

/* Tag cloud styles */

.pane-tagclouds-2 .pane-content {
  background: #f0f0f0;
  min-height: 380px;
  overflow: hidden;
  padding: 10px;
}

.pane-tagclouds-2 .more-link {
  display: none;
}

.wrapper.tagclouds {
  text-align: left;
  margin-right: 0;
}

.tagclouds {
  font-weight: bold;
  letter-spacing: .05em;
  line-height: 20px;
  margin-right: 1.5em;
  text-transform: uppercase;
}

.tagclouds.level1 {
  font-size: 1em;
}

.tagclouds.level2 {
  font-size: 1.1em;
}

.tagclouds.level3 {
  font-size: 1.2em;
}

.tagclouds.level4 {
  font-size: 1.3em;
}

.tagclouds.level5 {
  font-size: 1.4em;
}

.tagclouds.level6 {
  font-size: 1.5em;
}
.tagclouds.level7 {
  font-size: 1.6em;
}

.tagclouds.level8 {
  font-size: 1.7em;
}

.tagclouds.level9 {
  font-size: 1.7em;
}

.tagclouds.level10 {
  font-size: 1.7em;
}

.page-search-meta .mkdru-counts {
  display: block;
  margin-bottom: 10px;
}

.not-front .row-1 .grid-3 .panel-pane {
  margin-bottom: 20px;
}

#search-block-form input[name="search_block_form"] {
  color: #fff;
}
#search-block-form input[name="search_block_form"]::-webkit-input-placeholder {
  color: #fff;
}
#search-block-form input[name="search_block_form"]:-moz-placeholder {
  color: #fff;
}
#search-block-form input[name="search_block_form"]::-moz-placeholder {
  color: #fff;
}
#search-block-form input[name="search_block_form"]:-ms-input-placeholder {
  color: #fff;
}
#search-block-form input[name="search_block_form"].placeholder-text {
  color: #fff;
}

/* Equal columns height */
.panel-display > .panel-panel {
  overflow: hidden;
  clear: both;
}

.front .pane-content {
  padding-bottom: 100000px;
  margin-bottom: -100000px;
  background-color: white;
}

.mkdru-result-details {
  color: #323230;
  font-size: .833em;
  overflow: hidden;
  padding: 0 212px 0 0;
}

.mkdru-result-details ul {
  margin: 0;
}

.mkdru-result-details ul li {
  list-style: none;
  margin: 0;
  padding: 0;
}

.mkdru-result-details .b-bio-content {
  line-height: 1.2em;
}

.mkdru-results .mkdru-result-details table,
.mkdru-results .mkdru-result-details th {
  color: #323230;
  font-size: 1em; 
}

.mkdru-results .mkdru-result-details table {
  margin: 0 4px 10px;
}

.mkdru-results .mkdru-result-details th {
  font-weight: bold;
}

.mkdru-result-details-album,
.mkdru-result-details-suggestions {
  padding-bottom: 100000px;
  margin-bottom: -100000px;
}

.mkdru-result-details-album {
  background-color: #f0f0f0;
  float: left;
  width: 100%;
}

.mkdru-result-details-suggestions {
  background-color: #dcdcdc;
  float: right;
  margin-right: -212px;
  padding: 10px 10px 100000px 10px;
  width: 192px;
}

.mkdru-result-details-suggestions a {
  font-weight: bold;
}

.mkdru-result-details-suggestions h4 {
  font-size: 1em;
  font-weight: bold;
  letter-spacing: .02em;
  margin: 0 0 4px 0;
  padding: 0;
  text-transform: uppercase;
}

.mkdru-result-details .b-album-info {
  padding: 16px 14px 0 14px;
}

.mkdru-result-details .e-bio {
  margin-bottom: 23px;
}

.mkdru-result-details .e-bio img {
  float: right;
  height: auto;
  margin: 0 0 10px 10px;
  max-width: 99px;
}

.mkdru-result-details .e-suggestion {
  clear: both;
  margin-bottom: 11px;
}

.mkdru-result-details .e-album-info-thumb {
  float: left;
  margin: 0 10px 10px 0;
}

.mkdru-result-details .e-album-info-item {
  line-height: 1.5em;
}

.mkdru-result-details .e-album-info-item .name,
.mkdru-result-details .e-album-info-item .value {
  display: block;
}

.mkdru-result-details .e-album-info-item .value {
  margin-bottom: 14px;
}

.mkdru-results .mkdru-result-details thead th,
.mkdru-results .mkdru-result-details th,
.mkdru-results .mkdru-result-details tr {
  border-bottom: none;
}

.mkdru-results .mkdru-result-details th {
  padding-top: 0;
}

.mkdru-result.album {
  cursor: pointer;
}

